--- a/lesson_3/lesson_3.6.ipynb
+++ b/lesson_3/lesson_3.6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -44,11 +44,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exam1</th>\n",
+       "      <th>exam2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Andre</th>\n",
+       "      <td>F</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Barry</th>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chris</th>\n",
+       "      <td>C</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dan</th>\n",
+       "      <td>C</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Emilio</th>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fred</th>\n",
+       "      <td>C</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Greta</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Humbert</th>\n",
+       "      <td>D</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ivan</th>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>James</th>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        exam1 exam2\n",
+       "Andre       F     F\n",
+       "Barry       B     D\n",
+       "Chris       C     F\n",
+       "Dan         C     F\n",
+       "Emilio      B     D\n",
+       "Fred        C     F\n",
+       "Greta       A     C\n",
+       "Humbert     D     F\n",
+       "Ivan        A     C\n",
+       "James       B     D"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def grade_from_percent(grade):\n",
     "    if grade < 60:\n",
@@ -76,7 +162,9 @@
     "        0-59   -> F\n",
     "    '''\n",
     "    \n",
-    "    return grades.applymap(grade_from_percent)"
+    "    return grades.applymap(grade_from_percent)\n",
+    "\n",
+    "convert_grades(grades_df)"
    ]
   }
  ],
